# Tasks

./: README.md
include/: gcodeparser.cpp  gcodeparser.h  manipulator.cpp  manipulator.h  structures.h  utils_funcs.cpp  utils_funcs.h
task_1/task_1/: CMakeLists.txt  main.cpp
task_2/task_2/: CMakeLists.txt  main.cpp
task_3/: CMakeLists.txt  main.cpp
